# rbggamemanager

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  action.cpp  action.h  automaton.cpp  automaton.h  board.h  dispatchers.cpp  dispatchers.h  game.cpp  game.h  game_state.cpp  game_state.h  main.cpp  name_resolver.h
apps/: add_dots.cc  benchmark.cc  mark_illegal_dots.cc  mark_redundant_dots.cc  move_illegal_dots.cc  remove_redundant_dots.cc  start_random_python_client.py
examples/: amazons.rbg  big_board_squares.rbg  big_reversi.rbg  breakthrough.rbg  chess-cap.rbg  chess.rbg  connect4.rbg  doublechess.rbg  engdraughts-split.rbg  engdraughts.rbg  faster_checkers.rbg  go.rbg  reversi.rbg  simple_squares.rbg  tictactoe.rbg
examples/old/: chess-cap.rbg  doublechess.rbg  engdraughts-split.rbg  go.rbg
scripts/: benchmark.sh  check_equivalence.sh  cmakesubmodule.py  continous_play.sh  create_cmakelists.py  generate_square.py  make.sh  make_me.sh  play.py  pull.sh  test.sh  total_benchmark.sh  translate.py  visualize.sh  visualize_with_tk.sh
src/: benchmark.cc  benchmark.cpp  explain.cc  main.cpp  material_heuristic_client.cc  material_heuristic_client.cpp  move_decoder.cc  print.cc  random_client.cc  random_client.cpp  random_playing_client.cpp  run_server.cc  run_server.cpp  start_random_client.cc  start_random_python_client.py  start_server.cc
src/actions/: action.cc  action.cpp  action.h  action_application.h  action_types.h  actions.h  arithmetic.h  arithmetic_operation.cc  arithmetic_operation.cpp  arithmetic_operation.h  condition.cc  condition.cpp  condition.h  types.h
src/construction/: declarations_creator.cc  declarations_creator.h  gamestate_creator.cc  gamestate_creator.h  graph_creator.cc  graph_creator.h  search_step_creator.cc  search_step_creator.h  searchstep_creator.cc  searchstep_creator.cpp  searchstep_creator.h
src/construction/moves/: arithmetic_creator.cc  arithmetic_creator.h  moves.cc  moves.h  moves_creator.cc  moves_printer.cc  moves_printer.h  moves_visitor.h
src/game_components/: board.h  game_description.h  game_state.cc  game_state.cpp  game_state.h  graph_board.h  lazy_evaluator.cc  lazy_evaluator.cpp  lazy_evaluator.h  move.h  moves_cache.cpp  moves_cache.h  name_resolver.h  search_context.cc  search_context.cpp  search_context.h
src/game_description/: board.cc  board.h  declarations.h  names_resolver.h
src/game_description/construction/: arithmetic_creator.h  (+7 more)
src/game_nfa/: automaton.h  game_moves_description.h  graph.cpp  graph.h
src/game_state/: board.cc  board.h  calculate_perft.h  declarations.h  game_state.h  game_state_printer.cc  game_state_printer.h  names_resolver.cc  names_resolver.h  namesresolver.cc
src/gamestate/: board.cc  board.h  board_description.h  declarations.h  gamestate.h  namesresolver.h
src/graph/: graph.h
src/networking/: client.cpp  client.h  coder.cc  coder.h  message.cpp  message.h  networking_utils.cc  networking_utils.cpp  networking_utils.h  server.cc  server.cpp  server.h  socket.cc  socket.h  synchronous_client.h
src/optimized_actions/: action_application.h  action_types.h  arithmetic_operation.h  optimized_action.cc  optimized_action.h
src/parser/: actions_creator.cc  actions_creator.h  arithmetic_creator.cpp  arithmetic_creator.h  arithmetic_operations_creator.cc  arithmetic_operations_creator.cpp  arithmetic_operations_creator.h  game_nfa_creator.cc  game_nfa_creator.h  graph_creator.cc  graph_creator.h  parser_actions.h  parser_connection.cc  parser_connection.h  parser_utils.cpp  parser_utils.h  parser_visitor.h  parser_wrapper.cc  parser_wrapper.h  shift_table_creator.cc  shift_table_creator.h
src/parser_connection/: arithmetic_creator.cpp  arithmetic_creator.h  game_nfa_creator.cc  game_nfa_creator.cpp  game_nfa_creator.h  parser_connection.cc  parser_connection.cpp  parser_connection.h
src/python/: rbg.cc  rbg.cpp
src/python_bindings/: rbg.cc  rbg_string_graph.cc
src/python_widgets/: graph_widget.py  visualize_graph.py
src/stl_extension/: argparse.h  iterator_transform.h  pair.h  range.h  resetabblebitarraystack.h  utility.h  vector.h
src/tests/: amazons_test.cc  arimaa_test.cc  board_test.cc  chess_test.cc  client_disconnect_test.py  continous_play_test.py  creator_test.cc  declarations_test.cc  exceeds_deadline_test.py  game_state_simple_test.cc  gamestate_simple_test.cc  gess_test.py  graph_test.cc  graph_test.cpp  hex_test.cc  manager_exceeds_deadline_test.py  moves_logging_test.py  namesresolver_test.cc  network_message_test.cc  nfa_board_product_test.cc  parser_test.cc  perft_test.cc  perft_test.cpp  player_long_compilation_test.py  print_test.py  python_bindings_server_communication_test.py  python_bindings_test.py  python_test.py  reversi_test.cc  search_steps_test.cc  searchsteps_test.cc  server_communication_test.py  server_encoding_test.cc  server_games_limit_test.py  server_logging_test.py  single_blocks_test.cc  string_graph_python_bindings_test.py  test.h  tictactoe_test.cc  weird_conditions_test.cc
src/utilities/: graph_widget.py  visualize_graph.py
src/utility/: arithmetic_operation_visitor.h  calculate_perft.h  calculate_sim.h  graph.h  illegal_dots.cc  illegal_dots.h  mark_redundant_dots.cc  mark_redundant_dots.h  move_type.cc  move_type.h  moves_visitor.h  printer.cc  printer.h  rbg_random_generator.hpp  redundant_dots.cc  redundant_dots.h  resetabble_bitarray_stack.h  shift_table_checker.cc  shift_table_checker.h
src/utils/: fast_bit_vector.h  global_config.cpp  utilities.h
src/widgets/: graph_widget.py
tests/: add_dots_test.py  amazons_test.cc  continous_play_test.py  game_state_simple_test.cc  gess_test.py  graph_test.cc  hex_test.cc  manager_exceeds_deadline_test.py  mark_illegal_dots_test.py  mark_redundant_dots_test.py  move_illegal_dots_test.py  nfa_board_product_test.cc  parser_test.cc  player_long_compilation_test.py  python_bindings_perft_test.py  python_bindings_server_communication_test.py  remove_redundant_dots_test.py  server_encoding_test.cc  string_graph_python_bindings_test.py  tictactoe_test.cc  weird_conditions_test.cc
(+47 files in other folders)
